bin_PROGRAMS = tutorial06

AM_CXXFLAGS = $(INTI_CFLAGS) -Werror -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/advanced/06_Spriter

tutorial06_SOURCES = ../../../../tutorials/advanced/06_Spriter/CIndieLib_vc2008.cpp ../../../../tutorials/advanced/06_Spriter/Tutorial06.cpp

tutorial06_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL2 -lGLEW -lGLU -lGL
