bin_PROGRAMS = tutorial07

AM_CXXFLAGS = $(INTI_CFLAGS) -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/07_IND_Input

tutorial07_SOURCES = ../../../../tutorials/basic/07_IND_Input/CIndieLib_vc2008.cpp ../../../../tutorials/basic/07_IND_Input/Tutorial07.cpp

tutorial07_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL -lGLEW -lGLU -lGL -lILU -lILUT
