bin_PROGRAMS = tutorial08

AM_CXXFLAGS = $(INTI_CFLAGS) -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/08_Collisions

tutorial08_SOURCES = ../../../../tutorials/basic/08_Collisions/CIndieLib_vc2008.cpp ../../../../tutorials/basic/08_Collisions/Tutorial08.cpp

tutorial08_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL -lGLEW -lGLU -lGL -lILU -lILUT
