bin_PROGRAMS = tutorial11

AM_CXXFLAGS = $(INTI_CFLAGS) -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/11_Animated_Tile_Scrolling

tutorial11_SOURCES = ../../../../tutorials/basic/11_Animated_Tile_Scrolling/CIndieLib_vc2008.cpp ../../../../tutorials/basic/11_Animated_Tile_Scrolling/Tutorial11.cpp

tutorial11_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL -lGLEW -lGLU -lGL -lILU -lILUT
