bin_PROGRAMS = tutorial13

AM_CXXFLAGS = $(INTI_CFLAGS) -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/13_2d_Camera

tutorial13_SOURCES = ../../../../tutorials/basic/13_2d_Camera/CIndieLib_vc2008.cpp ../../../../tutorials/basic/13_2d_Camera/Tutorial13.cpp

tutorial13_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL -lGLEW -lGLU -lGL -lILU -lILUT
