bin_PROGRAMS = tutorial16

AM_CXXFLAGS = $(INTI_CFLAGS) -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/16_IND_Timer

tutorial16_SOURCES = ../../../../tutorials/basic/16_IND_Timer/CIndieLib_vc2008.cpp ../../../../tutorials/basic/16_IND_Timer/Tutorial16.cpp

tutorial16_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL -lGLEW -lGLU -lGL -lILU -lILUT
