bin_PROGRAMS = tutorial16

AM_CXXFLAGS = $(INTI_CFLAGS) -Werror -I @top_srcdir@/../common/include -I @top_srcdir@/../tutorials/basic/16_IND_Timer -I @top_srcdir@/../tutorials

tutorial16_SOURCES = ../../../../tutorials/WorkingPath.cpp  ../../../../tutorials/basic/16_IND_Timer/CIndieLib_vc2008.cpp ../../../../tutorials/basic/16_IND_Timer/Tutorial16.cpp

tutorial16_LDADD = -L@top_srcdir@/.libs $(INTI_LIBS) -lIndieLib -lSDL2 -lGLEW -lGLU -lGL
